--- a/pom.xml
+++ b/pom.xml
@@ -92,10 +92,10 @@
               <goal>shade</goal>
             </goals>
             <configuration>
-              <finalName>Search</finalName>
+              <finalName>Zip</finalName>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>ru.job4j.io.Search</mainClass>
+                  <mainClass>ru.job4j.io.Zip</mainClass>
                 </transformer>
               </transformers>
             </configuration>
