--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -9,3 +9,4 @@ hibernate.connection.password=password
 url=jdbc:postgresql://localhost:5432/idea_db
 login=postgres
 password=*#*Job4j
+driver=org.postgresql.Driver
