--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -6,7 +6,9 @@ hibernate.connection.driver_class=org.postgresql.Driver
 hibernate.connection.username=postgres
 hibernate.connection.password=password
 
-url=jdbc:postgresql://localhost:5432/idea_db
-login=postgres
-password=*#*Job4j
-driver=org.postgresql.Driver
+#url=jdbc:postgresql://localhost:5432/idea_db
+
+jdbc.url=jdbc:postgresql://127.0.0.1:5432/spammer
+jdbc.driver=org.postgresql.Driver
+jdbc.username=postgres
+jdbc.password=*#*Job4j
