--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,6 @@
       <scope>test</scope>
     </dependency>
 
-
-
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
@@ -85,6 +83,12 @@
       <artifactId>postgresql</artifactId>
       <version>42.3.4</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.puppycrawl.tools</groupId>
+      <artifactId>checkstyle</artifactId>
+      <version>8.30</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -92,7 +96,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>2.17</version>
+        <version>3.2.0</version>
         <executions>
           <execution>
             <id>validate</id>
